(Lukas) Initializing game files
-setting up first few id's for javascript and css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <article>
+        <section id="gameTitle">
+            <!-- PLACE GAME TITLE HERE -->
+        <section>
+        <button id="startButtons"></button>
+    </article>
 </body>
 </html>
