--- a/game.html
+++ b/game.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body id="interface">
     <article id="imageBox">
+        
+        <img src="img/forest.png" alt="Forest">
     </article>
 
     <article id="dialogueBox">
     </article>
 
-    <article id="actionsBox">
+    <!-- <article id="actionsBox">
         <button id="act"></button>
         <button id="eat"></button>
         <button id="talk"></button>
         <button id="combat"></button>
         <button id="inventory"></button>
-    </article>
+    </article> -->
+   
 </body>
 </html>
