UPDATED CSS (KINDA)

--- a/game.html
+++ b/game.html
@@ -9,10 +9,13 @@
 <body id="interface">
     <article id="imageBox">
         
-        <img src="img/forest.png" alt="Forest">
+        <!-- <img src="img/forest.png" alt="Forest"> -->
     </article>
 
     <article id="dialogueBox">
+    </article>
+
+    <article id="imgResize">
     </article>
 
     <!-- <article id="actionsBox">
