--- a/game.html
+++ b/game.html
@@ -12,10 +12,13 @@
         <!-- <img src="img/forest.png" alt="Forest"> -->
     </article>
 
+    <article id="imgResize">
+    </article>
+
     <article id="dialogueBox">
     </article>
 
-    <article id="imgResize">
+    <article id="actionsBox">
     </article>
 
     <!-- <article id="actionsBox">
