(Drew and Lukas)Implemented game screen layout
- Created a box for images
- Created a dialogue box where text will change dynamically
- Created 5 action buttons
- Added visual feedback upon hovering over one of the action buttons
- Added visual feedback for users without a mouse so that when you tab through the action buttons, they change color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <section id="gameTitle">
             <!-- PLACE GAME TITLE HERE -->
         <section>
-        <button id="startButtons"></button>
+        <!-- <button id="startButtons"></button> -->
     </article>
 </body>
 </html>
