--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="interface">
@@ -21,13 +21,13 @@
     <article id="actionsBox">
     </article>
 
-    <!-- <article id="actionsBox">
-        <button id="act"></button>
-        <button id="eat"></button>
-        <button id="talk"></button>
-        <button id="combat"></button>
-        <button id="inventory"></button>
-    </article> -->
+    <article id="actionsBox">
+        <button id="act">ACT</button>
+        <button id="eat">EAT</button>
+        <button id="talk">TALK</button>
+        <button id="combat">COMBAT</button>
+        <button id="inventory">INVENTORY</button>
+    </article>
    
 </body>
 </html>
