--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <article>
-        <section id="gameTitle">
+    <article id="gameTitle">
             <!-- PLACE GAME TITLE HERE -->
-        <section>
-        <!-- <button id="startButtons"></button> -->
+             <h1>Minceraft</h1>
     </article>
+    <article id="start"><a id="=startButtons" href="game.html"> Start Game </a></article>
 </body>
 </html>
