(Lukas) Enemy code and Text Function
- Edited Enemy code
- Added a new function in charge of writing text into the dialogue box (doesn't work yet)

--- a/game.html
+++ b/game.html
@@ -16,6 +16,19 @@
     </article>
 
     <article id="dialogueBox">
+        <style> 
+            #text{
+               color: white;
+               font-size: medium;
+               font-family: "Pixelify Sans", sans-serif;
+            }
+            #nextButton{
+                display: flex;
+                justify-self: flex-end;
+            }
+        </style>
+        <p id="text"></p>
+        <button id="nextButton" onclick="writeText()">Click me</button>
     </article>
 
     <article id="actionsBox">
