Typewriter function complete
- Using chatGPT, I finally got the text function to work. It now dynamically writes out the text stored in the variable, and it does this with a typewriter effect.

--- a/game.html
+++ b/game.html
@@ -17,18 +17,18 @@
 
     <article id="dialogueBox">
         <style> 
-            #text{
-               color: white;
-               font-size: medium;
-               font-family: "Pixelify Sans", sans-serif;
+            #text {
+                color: white;
+                font-size: medium;
+                font-family: "Pixelify Sans", sans-serif;
             }
-            #nextButton{
+            #nextButton {
                 display: flex;
                 justify-self: flex-end;
             }
         </style>
         <p id="text"></p>
-        <button id="nextButton" onclick="writeText()">Click me</button>
+        <button id="nextButton">Click me</button>
     </article>
 
     <article id="actionsBox">
@@ -40,7 +40,7 @@
         <button id="talk">TALK</button>
         <button id="combat">COMBAT</button>
         <button id="inventory">INVENTORY</button>
-    </article>
-   
+    </article>  
+    <script src="script.js"></script>
 </body>
 </html>
