--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <article id="gameTitle">
             <!-- PLACE GAME TITLE HERE -->
-             <h1>Minceraft</h1>
+             <h1>Redwing Quest</h1>
     </article>
     <article id="start"><a id="=startButtons" href="game.html"> Start Game </a></article>
 </body>
