--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
 </head>
 <body id="interface">
     <article id="imageBox">
+        <img src="img/forest.jpg" alt="Forest">
         
         <!-- <img src="img/forest.png" alt="Forest"> -->
     </article>
