This commit does nothing

--- a/game.html
+++ b/game.html
@@ -25,10 +25,14 @@
             #nextButton {
                 display: flex;
                 justify-self: flex-end;
+
+                font-size: x-large;
+                font-family: "Pixelify Sans", sans-serif;
+                background-color: white;
             }
         </style>
         <p id="text"></p>
-        <button id="nextButton">Click me</button>
+        <button id="nextButton">Continue</button>
     </article>
 
     <article id="actionsBox">
