(chatGPT) writeText and nextText functions
- Created a function that makes "continue" button disappear at a certain point in the intro (can be reused for other parts of the text)
- This is useful when the user is prompted to choose an action from the "actions" box or similar set of action buttons.

--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
         <style> 
             #text {
                 color: white;
-                font-size: medium;
+                font-size: x-large;
                 font-family: "Pixelify Sans", sans-serif;
             }
             #nextButton {
