--- a/game.html
+++ b/game.html
@@ -38,6 +38,9 @@
     <article id="actionsBox">
     </article>
 
+  <article id="grad">
+  </article>
+
     <article id="actionsBox">
         <button id="act">ACT</button>
         <button id="eat">EAT</button>
