--- a/game.html
+++ b/game.html
@@ -9,6 +9,9 @@
 <body id="interface">
     <article id="imageBox">
        
+        <div class="darryl-img">
+            <img src="img/Darryl.png" alt="Darryl">
+        </div>
         
     </article>
 
