--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
 <body id="interface">
     <article id="imageBox">
        
-        <div class="darryl-img">
+        <div id="darryl-img">
             <img src="img/Darryl.png" alt="Darryl">
         </div>
         
