David's easter egg

--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
     <article id="imageBox">
        
         <div id="darryl-img">
-            <img src="img/Darryl.png" alt="Darryl">
+           <a href="darryl.html"> <img src="img/Darryl.png" alt="David"> </a>
         </div>
         
     </article>
