Added INVENTORY; Added ACT button
Multiple updates:
INVENTORY:
- Added an inventory pop-up
- Inventory has two sections: "Player Stats" and "Items"
- Inventory displays player health, player exp and player strength in the "Player Stats" section
- Health variable changes color depending on the player's health quantity
ACT BUTTON:
- Added a popup to the act button (pops up on click)
- "Act" display lists clickable options that help the player make choices in the game depending on the situation
OTHER UPDATES:
- Styled the Inventory and "Act" pop-ups
- Removed the "EAT" and "TALK" buttons (they can be replaced by the ACT button)
- Removed "eat" and "talk" from the player.startChoices array

--- a/game.html
+++ b/game.html
@@ -38,10 +38,28 @@
         <button id="nextButton">Continue</button>
     </article>
 
+        <!-- Inventory Display -->
+    <article id="inventoryDisplay" style="display: none;">
+        <section id="inventoryContent">
+        <h3>Player Stats</h3>
+        <p id="playerHealth"></p>
+        <p id="playerExp"></p>
+        <p id="playerStrength"></p>
+    
+        <h3>Items</h3>
+        <ul id="playerItems"></ul>
+    
+        <button id="closeInventory">X</button>
+        </section>
+    </article>
+
+    <div id="actDisplay" style="display: none; padding: 10px; border: 2px solid white; background: black; color: white; border-radius: 8px; margin-bottom: 12px;">
+        <div id="actOptions"></div>
+        <button id="closeActDisplay" style="margin-top: 8px;">X</button>
+    </div>
+
     <article id="actionsBox">
         <button id="act">ACT</button>
-        <button id="eat">EAT</button>
-        <button id="talk">TALK</button>
         <button id="combat">COMBAT</button>
         <button id="inventory">INVENTORY</button>
     </article>  
