Many updates to UI functionality

--- a/game.html
+++ b/game.html
@@ -55,12 +55,12 @@
 
     <div id="actDisplay" style="display: none; padding: 10px; border: 2px solid white; background: black; color: white; border-radius: 8px; margin-bottom: 12px;">
         <div id="actOptions"></div>
-        <button id="closeActDisplay" style="margin-top: 8px;">X</button>
+        <button id="closeActDisplay">X</button>
     </div>
 
     <article id="actionsBox">
-        <button id="act">ACT</button>
-        <button id="combat">COMBAT</button>
+        <button id="act" class="disabled">ACT</button>
+        <button id="combat" class="disabled">COMBAT</button>
         <button id="inventory">INVENTORY</button>
     </article>  
     <script src="script.js"></script>
