--- a/darryl.html
+++ b/darryl.html
@@ -9,6 +9,6 @@
 </head>
 <body id="darryl-page">
         <img src="img/Darryl.png" alt="David">
-        <p> You Found David 🙂 </p>
+        <p> 🙂 You Found Darryl 🙂 </p>
 </body>
 </html>
