Worked on Combat
- Added a display pop-up with a stat section for enemy health.
- Added functions that are connected to the player's move set and inventory
- These functions need to be reworked because they do not work properly.

--- a/game.html
+++ b/game.html
@@ -64,6 +64,16 @@
         <button id="closeActDisplay">X</button>
     </div>
 
+    <!-- COMBAT display -->
+    <article id="combatDisplay" style="display: none;">
+        <h3>COMBAT</h3>
+        <p id="enemyHealth">Enemy Health:</p>
+        <div id="combatMovesContainer">
+            <!-- Combat move buttons will appear here -->
+        </div>
+        <button id="closeCombat">X</button>
+    </article>
+
     </article>  
     <script src="script.js"></script>
 </body>
