--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
             <!-- PLACE GAME TITLE HERE -->
              <h1>Redwing Quest</h1>
     </article>
-    <article id="start"><a id="=startButtons" href="game.html"> Start Game </a></article>
+    <article id="start"><a id="=startButtons" href="1.1first-scenes.html"> Start Game </a></article>
 </body>
 </html>
