--- a/getBackEnding.html
+++ b/getBackEnding.html
@@ -8,8 +8,9 @@
 <body>
     <article id="gameOver">
             <!-- PLACE GAME TITLE HERE -->
-            <h1>Game Over</h1>
-            <h2>You've obtained the "Get Eaten" ending.</h2>
+            <h1>Fin...?</h1>
+            <h2>You've obtained the "Get Back" ending.</h2>
+            <h2>Would you like to obtain a different ending?</h2>
     </article>
     <article id="start"><a id="=startButtons" href="1.1first-scenes.html"> Reset Game </a></article>
 </body>
