--- a/1.1first-scenes.html
+++ b/1.1first-scenes.html
@@ -9,9 +9,9 @@
 <body id="interface">
     <article id="imageBox">
        
-        <!-- <div id="darryl-img">
+        <div id="darryl-img">
            <a href="darryl.html"> <img src="img/Darryl.png" alt="David"> </a>
-        </div> -->
+        </div>
         
     </article>
 
